# CLAM

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest_workflow.yml
docs/source/: api.rst  conf.py  index.rst  install.rst
wsi/: WholeSlideImage.py  __init__.py  dataset_h5.py  util_classes.py  utils.py  wsi.py  wsi_dataset.py  wsi_utils.py
wsi/tests/: test_wsi.py
wsi_core/: WholeSlideImage.py  __init__.py  core_utils.py  dataset_h5.py  util_classes.py  utils.py  wsi_utils.py
