# PIP, using PEP621
[project]
name = "wsi"
authors = [
    {name = "Andre Rendeiro", email = "arendeiro@cemm.at"},
]
description = "Tools to process whole slide images. A fork of mahmoodlab/CLAM"
readme = "README.md"
keywords = [
    "computational pathology",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
#license = "gpt3"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.10.0",
    "numpy",
    "opencv-python>=4.11.0.86",
    "openslide-bin>=4.0.0.6",
    "openslide-python>=1.4.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "shapely>=2.0.6",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
dynamic = ['version']

[project.optional-dependencies]
dev = [
    "black[d]>=24.10.0",
    "mypy>=1.14.1",
    "git-lint>=0.1.2",
    "ipython>=8.31.0",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "rich>=13.9.4",
]
doc = [
    "pydata-sphinx-theme>=0.16.1",
    "numpydoc>=1.8.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-issues>=5.0.0",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
homepage = "https://github.com/rendeirolab/wsi"
documentation = "https://github.com/rendeirolab/wsi/blob/main/README.md"
repository = "https://github.com/rendeirolab/wsi"

[build-system]
# requires = ["poetry>=0.12", "setuptools>=45", "wheel", "poetry-dynamic-versioning"]
# build-backend = "poetry.masonry.api"
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "wsi/_version.py"
write_to_template = 'version = __version__ = "{version}"'

[tool.black]
line-length = 90
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = '3.10'
warn_return_any = true
warn_unused_configs = true

# Packages without type annotations in shed yet
[[tool.mypy.overrides]]
module = [
    'numpy.*',
    'pandas.*',
    'scipy.*',
    'skimage.*',
    'matplotlib.*',
    'networkx.*',
    #
    'wsi.*'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "integration",
]
markers = [
    'slow', # 'marks tests as slow (deselect with "-m 'not slow'")',
    "wsi"
]
